spacing has been corrected

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,7 +2,7 @@
   background: #FFFFFF;
   box-shadow: 3px 4px 10px rgba(0, 0, 0, 0.07);
   border-radius: 10px;
-  width: 318px;
+  width: 90%;
   margin: 16px auto;
 }
 
@@ -64,7 +64,7 @@
 }
 
 .songkick-card {
-  width: 326px;
+  width: 90%;
   height: 81px;
   left: 21px;
   top: 595px;
@@ -94,4 +94,12 @@
 .songkick-card .post-misc {
   display: flex;
   margin-left: 46px;
+}
+
+.artist-card-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-grow: 1;
+  margin-left: 16px;
 }
